# poly_trader

./: IDENTITY.md  USER.md
.github/workflows/: deploy-milk-tapper.yml
elite-lite/: index.html
memory/: price-source-benchmark.md
milk-tapper/: game.js  index.html  styles.css
polymarket-mvp/: .gitignore  OPERATING_CHARTER.md  README.md  pyproject.toml
polymarket-mvp/config/: default.yaml
polymarket-mvp/scripts/: health_snapshot.py  hourly_health_snapshot.py  hourly_review.py  secret_check.sh
polymarket-mvp/src/polymarket_mvp/: config.py  dashboard.py  loop.py  main.py  models.py  ops_intel.py  rtds_hook.py  weather_scan.py  ws_hook.py
polymarket-mvp/src/polymarket_mvp/adapters/: clob.py  gamma.py
polymarket-mvp/src/polymarket_mvp/engine/: scoring.py
polymarket-mvp/src/polymarket_mvp/execution/: live.py
polymarket-mvp/src/polymarket_mvp/risk/: guards.py
polymarket-mvp/src/polymarket_mvp/sim/: paper.py
polymarket-mvp/src/polymarket_mvp/utils/: storage.py
polymarket-mvp/src/polymarket_mvp/weather/: city_map.py  signals.py  sources.py
polymarket-mvp/web/: app.js  index.html  styles.css
voxel-map/: index.html
