[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-mvp"
version = "0.1.0"
description = "Paper-first Polymarket scanner/execution MVP"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "rich>=13.7",
  "websockets>=12.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]
